# mytherra_rust

./: .gitignore  CODE_REVIEW_template_2026-06-06.md  Cargo.toml  README.md  RUNNING.md  game_page.json  gdd.md  index.html  publish.ps1  run-server.ps1
.github/workflows/: rust-ci.yml
assets/data/: achievements.json  actions.json  agendas.json  artifacts.json  balance.json  bet_types.json  building_types.json  buildings.json  confidence_levels.json  era_names.json  game_config.json  hero_names.json  heroes.json  landmark_names.json  landmarks.json  magic_paths.json  monster_types.json  myth_themes.json  pantheon.json  plague_names.json  region_actions.json  regions.json  resource_nodes.json  settlement_names.json  settlements.json  strings.json  tiers.json  timeframe_modifiers.json  trade_routes.json  weather_intensities.json  weather_patterns.json
mytherra-core/: Cargo.toml
mytherra-core/src/: capability.rs  command.rs  data.rs  lib.rs  save.rs  sim.rs  world.rs
mytherra-core/src/command/: action.rs
mytherra-core/src/data/: artifact.rs  balance.rs  bet.rs  civilization.rs  config.rs  landmark.rs  monster.rs  myth.rs  resource.rs  settlement.rs  strings.rs  tiers.rs
mytherra-core/src/data/balance/: champion.rs  divine.rs
mytherra-core/src/sim/: champion.rs  culture.rs  era.rs  festival.rs  landmark.rs  magic.rs  pact.rs  prophecy.rs  refugee.rs  settlement.rs  speculation.rs  vassalage.rs
mytherra-core/src/sim/genesis/: conquest.rs  tests.rs
mytherra-core/src/world/: artifact.rs  bet.rs  chronicle.rs  festival.rs  hero.rs  landmark.rs  monster.rs  order.rs  pantheon.rs  player.rs  resource.rs  saint.rs  settlement.rs  speculation.rs
mytherra-persistence/: Cargo.toml
mytherra-persistence/migrations/: 0001_create_persistence_schema.sql
mytherra-persistence/src/: config.rs  lib.rs  player_store.rs  world_store.rs
mytherra-protocol/: Cargo.toml
mytherra-protocol/src/: action.rs  capability.rs  lib.rs  view.rs
mytherra-server/: .env.example  Cargo.toml
mytherra-server/migrations/: 0001_create_world_tables.sql
mytherra-server/src/: config.rs  db.rs  main.rs
scripts/: capture_ui.ps1
src/: data.rs  game.rs  main.rs  net.rs  save.rs  sim.rs  state.rs  ui.rs  world.rs
src/data/: action.rs  balance.rs  bet.rs  building.rs  champion.rs  civilization.rs  config.rs  era.rs  hero.rs  landmark.rs  magic.rs  myth.rs  pantheon.rs  region.rs  resource.rs  settlement.rs  strings.rs  trade.rs  weather.rs
src/data/balance/: champion.rs  divine.rs  economy.rs  era.rs  genesis.rs  hero.rs  region.rs
src/game/: achievements.rs  actions.rs  actions_tools.rs  capture.rs  command.rs  online.rs
src/sim/: artifact.rs  champion.rs  civilization.rs  consequence.rs  culture.rs  era.rs  famine.rs  festival.rs  genesis.rs  hero.rs  house.rs  landmark.rs  lore.rs  magic.rs  monster.rs  myth.rs  order.rs  pantheon.rs  plague.rs  prophecy.rs  refugee.rs  region.rs  resource.rs  saint.rs  settlement.rs  speculation.rs  trade.rs  war.rs  weather.rs
src/sim/genesis/: conquest.rs  fracture.rs  frontier.rs  tests.rs
src/ui/: betting.rs  chronicle.rs  dashboard.rs  divine_tools.rs  eras.rs  heroes.rs  placeholder.rs  regions.rs  settings.rs  shell.rs  title.rs  widgets.rs
src/ui/divine_tools/: artifacts.rs  civilization.rs  magic.rs  myths.rs  omens.rs  pantheon.rs  weather.rs
src/ui/regions/: detail.rs  town.rs
src/world/: artifact.rs  bet.rs  building.rs  champion.rs  chronicle.rs  civilization.rs  consequence.rs  era.rs  hero.rs  house.rs  landmark.rs  magic.rs  monster.rs  myth.rs  pact.rs  plague.rs  player.rs  prophecy.rs  region.rs  settlement.rs  speculation.rs  trade.rs  vassalage.rs  war.rs  weather.rs
