[package]
name = "mytherra"
version = "0.1.0"
edition = "2021"

# This package is the macroquad client (GDD 12); the simulation lives in the
# `mytherra-core` member crate, which the client embeds for its offline mode.
[workspace]
members = ["mytherra-core", "mytherra-protocol", "mytherra-server"]

[dependencies]
mytherra-core = { path = "mytherra-core" }
mytherra-protocol = { path = "mytherra-protocol" }
macroquad = "0.4"
macroquad-toolkit = { path = "../macroquad-toolkit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Native-only HTTP for talking to mytherra-server (GDD 7.4). The WASM/WebGL
# build talks to the server through a browser-fetch client instead (a later
# spike), so the `net` module and this dependency are compiled out there.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", default-features = false, features = ["json"] }
