[package]
name = "mytherra"
version = "0.1.0"
edition = "2021"

# This package is the macroquad client (GDD 12); the simulation lives in the
# `mytherra-core` member crate, which the client embeds for its offline mode.
[workspace]
members = ["mytherra-core", "mytherra-protocol", "mytherra-server"]

[dependencies]
mytherra-core = { path = "mytherra-core" }
mytherra-protocol = { path = "mytherra-protocol" }
macroquad = "0.4"
macroquad-toolkit = { path = "../macroquad-toolkit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Cross-platform HTTP for the authority server (GDD 7.4). quad-net rides
# macroquad's own JS interop (sapp-jsutils) on wasm rather than wasm-bindgen, so
# it coexists with macroquad's WebGL build; on native it uses ureq in a thread.
# Both platforms share one poll-based (non-blocking) API — see `src/net.rs`.
quad-net = "0.1.2"
