[package]
name = "mytherra-server"
version = "0.1.0"
edition = "2021"

# The authority server (GDD 7): owns the shared world and per-player state, runs
# the tick loop, and serves each player their Standing-filtered projection. M1
# scaffold — a single in-memory guest, read endpoints only. axum/tokio follow
# the kaiju_server precedent in this catalog.
[dependencies]
mytherra-core = { path = "../mytherra-core" }
mytherra-protocol = { path = "../mytherra-protocol" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# CORS so the browser (WASM) client, served from a different origin than the
# server's port, isn't blocked from calling the API (GDD 7.4/7.6).
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# The DB *is* the save (GDD 6/8): the shared world and every deity's private
# state persist to MySQL and resume on restart, so a server bounce no longer
# resets the world. Follows the `kaiju_sim/kaiju_server` sqlx precedent in this
# workspace. `json` gives the `Json<T>` codec that stores each serde state as a
# JSON column; the core stays pure (no I/O) — persistence lives only here.
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "json"] }
# Reads DB_HOST/DB_PORT/DB_USER/DB_PASSWORD/DB_DATABASE from a local `.env`
# (gitignored) so credentials never live in a committed config file.
dotenvy = "0.15"
